--- a/core/MANIFEST.in
+++ b/core/MANIFEST.in
@@ -1,3 +1,5 @@
-include doc/*
 include requirements.*.txt
 include README.md
+include doc/*
+recursive-include recc/www *
+recursive-include recc/node_builtin *.json
