--- a/core/MANIFEST.in
+++ b/core/MANIFEST.in
@@ -2,5 +2,6 @@ include requirements.*.txt
 include README.md
 include doc/*
 recursive-include recc/container *.sh
+recursive-include recc/container *.dockerfile
 recursive-include recc/node_builtin *.json
 recursive-include recc/www *
