--- a/fe/package.json
+++ b/fe/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fe",
-  "version": "0.1.0",
+  "name": "recc-fe",
+  "version": "2.0.0-dev6",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
