Create RouterV2Public class.

--- a/core/requirements.main.txt
+++ b/core/requirements.main.txt
@@ -4,6 +4,7 @@ cchardet>=2.1.7
 aiodns>=2.0.0
 brotlipy>=0.7.0
 aiohttp_cors>=0.7.0
+aiohttp-swagger>=1.0.15
 grpcio>=1.36.1
 asyncpg>=0.22.0
 pyyaml>=5.4.1
