--- a/fe/package.json
+++ b/fe/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^5.9.55",
+    "@mdi/js": "^5.9.55",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
