--- a/fe/package.json
+++ b/fe/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build --no-clean --dest ../core/recc/www",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e --headless",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
@@ -29,7 +30,7 @@
     "vue-chartjs": "^3.5.1",
     "vue-class-component": "^7.2.3",
     "vue-drag-drop": "1.1.4",
-    "vue-i18n": "^8.16.0",
+    "vue-i18n": "^8.22.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vue-rx": "3.1.1",
@@ -39,6 +40,7 @@
     "vuex-persist": "2.0.1"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^1.0.0",
     "@mdi/font": "^5.9.55",
     "@mdi/js": "^5.9.55",
     "@types/jest": "^24.0.19",
@@ -67,6 +69,7 @@
     "sass": "^1.19.0",
     "sass-loader": "10",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-i18n": "~2.1.1",
     "vue-cli-plugin-styleguidist": "~4.22.3",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
