--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
+    "@types/lodash": "^4.14.172",
     "ansi_up": "^4.0.4",
     "axios": "0.18.0",
     "chart.js": "^2.9.4",
@@ -19,6 +20,7 @@
     "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "^3.6.5",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
     "paper": "^0.12",
     "register-service-worker": "^1.7.1",
@@ -34,6 +36,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vue-rx": "3.1.1",
+    "vue-toastification": "^1.7.11",
     "vuedraggable": "2.19.2",
     "vuetify": "^2.5.6",
     "vuex": "^3.4.0",
@@ -134,6 +137,8 @@
   ],
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel",
-    "setupFiles": ["./tests/unit/setup.ts"]
+    "setupFiles": [
+      "./tests/unit/setup.ts"
+    ]
   }
 }
