--- a/fe/package.json
+++ b/fe/package.json
@@ -37,7 +37,7 @@
     "vue-router": "^3.2.0",
     "vue-rx": "3.1.1",
     "vue-toastification": "^1.7.11",
-    "vuedraggable": "2.19.2",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.5.8",
     "vuex": "^3.4.0",
     "vuex-persist": "2.0.1"
