--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@types/lodash": "^4.14.172",
     "ansi_up": "^4.0.4",
+    "apexcharts": "^3.28.1",
     "axios": "0.18.0",
     "chart.js": "^2.9.4",
     "chartjs-plugin-colorschemes": "^0.4.0",
@@ -29,6 +30,7 @@
     "sha256": "^0.2.0",
     "splitpanes": "^2.2.1",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^3.5.1",
     "vue-class-component": "^7.2.6",
     "vue-drag-drop": "1.1.4",
