Fix recursive-include in MANIFEST

--- a/core/MANIFEST.in
+++ b/core/MANIFEST.in
@@ -1,5 +1,6 @@
 include requirements.*.txt
 include README.md
 include doc/*
-recursive-include recc/node_builtin *.json
+recursive-include recc/lamda_builtin *
+recursive-include recc/lamda *
 recursive-include recc/www *
