--- a/fe/package.json
+++ b/fe/package.json
@@ -18,6 +18,7 @@
     "axios": "0.18.0",
     "chart.js": "^2.9.4",
     "chartjs-plugin-colorschemes": "^0.4.0",
+    "chartjs-plugin-streaming": "^2.0.0",
     "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "^3.6.5",
     "jsonwebtoken": "^8.5.1",
