--- a/fe/package.json
+++ b/fe/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@types/lodash": "^4.14.172",
+    "@vue/composition-api": "^1.2.2",
     "ansi_up": "^4.0.4",
     "apexcharts": "^3.28.1",
     "axios": "0.18.0",
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.5.1",
+    "chartjs-adapter-moment": "^1.0.0",
     "chartjs-plugin-colorschemes": "^0.4.0",
     "chartjs-plugin-streaming": "^2.0.0",
     "chartjs-plugin-zoom": "^0.7.7",
@@ -24,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
+    "moment": "^2.29.1",
     "paper": "^0.12",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "^0.10.0",
@@ -32,7 +35,7 @@
     "splitpanes": "^2.2.1",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
-    "vue-chartjs": "^3.5.1",
+    "vue-chart-3": "^0.5.8",
     "vue-class-component": "^7.2.6",
     "vue-drag-drop": "1.1.4",
     "vue-i18n": "^8.22.3",
