--- a/fe/package.json
+++ b/fe/package.json
@@ -21,6 +21,7 @@
     "chartjs-plugin-streaming": "^2.0.0",
     "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "^3.6.5",
+    "downloadjs": "^1.4.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
