--- a/fe/package.json
+++ b/fe/package.json
@@ -43,7 +43,8 @@
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.5.8",
     "vuex": "^3.4.0",
-    "vuex-persist": "2.0.1"
+    "vuex-persist": "2.0.1",
+    "winbox": "^0.2.0"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.0.0",
