--- a/fe/package.json
+++ b/fe/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "paper": "^0.12",
+    "pixi.js": "^6.1.3",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "5.4.0",
