--- a/core/logging.yml
+++ b/core/logging.yml
@@ -44,7 +44,10 @@ handlers:
     encoding: utf-8
     delay: false
 
-#loggers:
+loggers:
+  zeep:
+    level: WARNING
+
 #  aiohttp:
 #    level: DEBUG
 #  asyncio:
