Update analysis scripts

--- a/core/flake8.ini
+++ b/core/flake8.ini
@@ -5,6 +5,10 @@ max-line-length = 88
 extend-ignore =
     E203, W503
 exclude =
+    */.git,
+    */.venv,
+    */ckps/*,
+    */configs/*,
     *_pb2.py,
     *_pb2_grpc.py
 filename = *.py
