Update pytest configs

--- a/core/pytest.ini
+++ b/core/pytest.ini
@@ -10,8 +10,8 @@ source_pkgs = recc
 omit =
     */__init__.py
     */__main__.py
-    *recc/proto/api_pb2.py
-    *recc/proto/api_pb2_grpc.py
+    *_pb2.py
+    *_pb2_grpc.py
 
 # pytest-cov
 # values common to many kinds of reporting.
