--- a/fe/package.json
+++ b/fe/package.json
@@ -34,6 +34,7 @@
     "rxjs": "5.4.0",
     "sha256": "^0.2.0",
     "splitpanes": "^2.2.1",
+    "viewerjs": "^1.10.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
     "vue-drag-drop": "1.1.4",
