--- a/core/mypy.ini
+++ b/core/mypy.ini
@@ -6,7 +6,7 @@ show_error_context = True
 show_column_numbers = True
 show_error_codes = True
 pretty = True
-exclude = (/.git|/.venv|/configs|/ckps)
+exclude = (/.git|/.venv|/configs|/ckps|/storage)
 
 [mypy-recc.proto.*]
 ignore_errors = True
