--- a/core/requirements.test.txt
+++ b/core/requirements.test.txt
@@ -1,12 +1,12 @@
-black>=20.8b1
-flake8>=3.8.4
-mypy>=0.812
-mypy-protobuf>=2.4
-types-requests
-types-orjson
-types-PyYAML
-types-protobuf
-types-python-dateutil
-pytest>=6.2.1
-pytest-cov>=2.10.1
-coverage>=5.3
+black>=21.12b0
+flake8>=4.0.1
+mypy>=0.931
+mypy-protobuf>=3.1.0
+types-requests>=2.27.1
+types-orjson>=3.6.2
+types-PyYAML>=6.0.3
+types-protobuf>=3.19.0
+types-python-dateutil>=2.8.7
+pytest>=6.2.5
+pytest-cov>=3.0.0
+coverage>=6.2
