--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,7 @@
     "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "^3.6.5",
     "downloadjs": "^1.4.7",
+    "hls.js": "^1.1.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
