--- a/fe/package.json
+++ b/fe/package.json
@@ -15,6 +15,7 @@
     "@types/lodash": "^4.14.172",
     "ansi_up": "^4.0.4",
     "axios": "0.18.0",
+    "caniuse-lite": "^1.0.30001307",
     "chart.js": "^3.5.1",
     "chartjs-adapter-moment": "^1.0.0",
     "chartjs-plugin-colorschemes": "^0.4.0",
