--- a/core/requirements.test.txt
+++ b/core/requirements.test.txt
@@ -1,12 +1,12 @@
-black>=21.12b0
+black>=22.1.0
 flake8>=4.0.1
 mypy>=0.931
-mypy-protobuf>=3.1.0
-types-requests>=2.27.1
+mypy-protobuf>=3.2.0
+types-requests>=2.27.8
 types-orjson>=3.6.2
-types-PyYAML>=6.0.3
-types-protobuf>=3.19.0
-types-python-dateutil>=2.8.7
-pytest>=6.2.5
+types-PyYAML>=6.0.4
+types-protobuf>=3.19.10
+types-python-dateutil>=2.8.9
+pytest>=7.0.0
 pytest-cov>=3.0.0
-coverage>=6.2
+coverage>=6.3.1
