--- a/fe/package.json
+++ b/fe/package.json
@@ -56,6 +56,7 @@
     "@intlify/vue-i18n-loader": "^1.0.0",
     "@mdi/font": "^6.5.95",
     "@mdi/js": "^6.5.95",
+    "@types/dragula": "^3.7.1",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
