--- a/fe/package.json
+++ b/fe/package.json
@@ -31,7 +31,8 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "paper": "^0.12",
-    "pixi.js": "^6.1.3",
+    "pixi.js": "^6.3.0",
+    "puxi.js": "^0.0.5",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "^0.10.0",
     "sha256": "^0.2.0",
