--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
+    "@types/fontfaceobserver": "^2.1.0",
     "@types/lodash": "^4.14.172",
     "ansi_up": "^4.0.4",
     "axios": "0.18.0",
@@ -24,6 +25,7 @@
     "core-js": "^3.6.5",
     "downloadjs": "^1.4.7",
     "dragula": "^3.7.3",
+    "fontfaceobserver": "^2.1.0",
     "hls.js": "^1.1.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
