--- a/fe/package.json
+++ b/fe/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "paper": "^0.12",
+    "pixi-text-input": "^1.0.6",
     "pixi.js": "^6.3.0",
     "puxi.js": "^0.0.5",
     "register-service-worker": "^1.7.1",
