Add prettier config

--- a/fe/package.json
+++ b/fe/package.json
@@ -14,8 +14,6 @@
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@juggle/resize-observer": "^3.3.1",
     "@toast-ui/vue-grid": "^4.21.0",
-    "@types/fontfaceobserver": "^2.1.0",
-    "@types/lodash": "^4.14.172",
     "ansi_up": "^4.0.4",
     "axios": "0.18.0",
     "caniuse-lite": "^1.0.30001307",
@@ -58,7 +56,9 @@
     "@mdi/font": "^6.5.95",
     "@mdi/js": "^6.5.95",
     "@types/dragula": "^3.7.1",
+    "@types/fontfaceobserver": "^2.1.0",
     "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.172",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -89,6 +89,21 @@
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
+  },
+  "prettier": {
+    "printWidth": 88,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "quoteProps": "as-needed",
+    "trailingComma": "all",
+    "bracketSpacing": false,
+    "bracketSameLine": false,
+    "arrowParens": "avoid",
+    "htmlWhitespaceSensitivity": "ignore",
+    "vueIndentScriptAndStyle": false,
+    "endOfLine": "lf"
   },
   "eslintConfig": {
     "root": true,
