--- a/fe/package.json
+++ b/fe/package.json
@@ -8,8 +8,13 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e --headless",
     "lint": "vue-cli-service lint",
-    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\"",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@juggle/resize-observer": "^3.3.1",
@@ -56,6 +61,7 @@
     "@mdi/font": "^6.5.95",
     "@mdi/js": "^6.5.95",
     "@types/dragula": "^3.7.1",
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/fontfaceobserver": "^2.1.0",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.172",
@@ -73,6 +79,8 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.2.2",
+    "electron": "^13.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
@@ -83,27 +91,14 @@
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "10",
+    "spectron": "15.0.0",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-cli-plugin-i18n": "~2.1.1",
     "vue-cli-plugin-styleguidist": "~4.22.3",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
-  },
-  "prettier": {
-    "printWidth": 88,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": true,
-    "quoteProps": "as-needed",
-    "trailingComma": "all",
-    "bracketSpacing": false,
-    "bracketSameLine": false,
-    "arrowParens": "avoid",
-    "htmlWhitespaceSensitivity": "ignore",
-    "vueIndentScriptAndStyle": false,
-    "endOfLine": "lf"
   },
   "eslintConfig": {
     "root": true,
@@ -156,6 +151,21 @@
         }
       }
     ]
+  },
+  "prettier": {
+    "printWidth": 88,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "quoteProps": "as-needed",
+    "trailingComma": "all",
+    "bracketSpacing": false,
+    "bracketSameLine": false,
+    "arrowParens": "avoid",
+    "htmlWhitespaceSensitivity": "ignore",
+    "vueIndentScriptAndStyle": false,
+    "endOfLine": "lf"
   },
   "browserslist": [
     "> 1%",
