--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,14 +1,8 @@
 # git ignore file.
 
-node_modules
+/node_modules
 /dist
 
 # local env files
 .env.local
 .env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
