--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bogonets/recc-api",
+  "name": "@recc/api",
   "version": "1.0.0",
   "description": "Frontend API for the recc core",
   "main": "index.ts",
@@ -7,7 +7,34 @@
   "author": "zer0",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "webpack"
+  },
   "devDependencies": {
-    "typescript": "^4.6.3"
-  }
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "babel-loader": "^8.2.4",
+    "eslint": "^8.12.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.3",
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2"
+  },
+  "prettier": {
+    "printWidth": 88,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "quoteProps": "as-needed",
+    "trailingComma": "all",
+    "bracketSpacing": false,
+    "bracketSameLine": false,
+    "arrowParens": "avoid",
+    "htmlWhitespaceSensitivity": "ignore",
+    "vueIndentScriptAndStyle": false,
+    "endOfLine": "lf"
+  },
+  "dependencies": {}
 }
