--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -4,7 +4,12 @@
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "paths": {
+      "*.ts": ["*"],
+      "@/*": ["src/*"]
+    }
   },
-  "files": ["src/index.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "tests/**/*.ts", "tests/**/*.tsx"],
+  "exclude": ["node_modules", "dist"]
 }
