--- a/api/package.json
+++ b/api/package.json
@@ -11,9 +11,11 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
+    "axios-mock-adapter": "^1.20.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.4",
     "eslint": "^8.12.0",
@@ -60,7 +62,10 @@
       "prettier/prettier": "error",
       "indent": [
         "error",
-        2
+        2,
+        {
+          "SwitchCase": 1
+        }
       ],
       "linebreak-style": [
         "error",
@@ -96,7 +101,6 @@
     "endOfLine": "lf"
   },
   "dependencies": {
-    "@types/crypto-js": "^4.1.1",
     "axios": "^0.26.1",
     "crypto-js": "^4.1.1"
   },
