--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,18 @@
   "author": "zer0",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "lint": "eslint . --ext .jsx,.js,.tsx,.ts",
+    "test": "jest"
+  },
+  "dependencies": {
+    "axios": "^0.26.1",
+    "crypto-js": "^4.1.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
@@ -28,14 +40,6 @@
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
-  },
-  "scripts": {
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "lint": "eslint . --ext .jsx,.js,.tsx,.ts",
-    "test": "jest"
   },
   "eslintConfig": {
     "root": true,
@@ -100,12 +104,9 @@
     "vueIndentScriptAndStyle": false,
     "endOfLine": "lf"
   },
-  "dependencies": {
-    "axios": "^0.26.1",
-    "crypto-js": "^4.1.1"
-  },
   "jest": {
     "preset": "ts-jest",
+    "testEnvironment": "jsdom",
     "moduleNameMapper": {
       "@/(.*)$": "<rootDir>/src/$1"
     }
