Test refresh token errors

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
+    "skipLibCheck": true,
     "module": "esnext",
     "target": "esnext",
     "allowJs": true,
     "moduleResolution": "node",
+    "baseUrl": ".",
     "paths": {
-      "*.ts": ["*"],
       "@/*": ["src/*"]
     }
   },
