--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,21 +1,21 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "emitDeclarationOnly": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
     "module": "esnext",
-    "target": "esnext",
+    "target": "es6",
     "allowJs": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
-    "baseUrl": ".",
     "outDir": "dist",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "sourceMap": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "tests/**/*.ts", "tests/**/*.tsx"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ],
   "exclude": ["node_modules", "dist"]
 }
