--- a/fe/package.json
+++ b/fe/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@juggle/resize-observer": "^3.3.1",
+    "@recc/api": "^2.0.0-dev9-2",
     "@toast-ui/vue-grid": "^4.21.0",
     "ansi_up": "^4.0.4",
     "axios": "0.18.0",
