--- a/fe/package.json
+++ b/fe/package.json
@@ -8,26 +8,16 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e --headless",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\"",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "main": "background.js",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.2",
     "@juggle/resize-observer": "^3.3.1",
     "@recc/api": "^2.0.0-dev9-2",
     "@toast-ui/vue-grid": "^4.21.0",
-    "ansi_up": "^4.0.4",
-    "axios": "0.18.0",
-    "caniuse-lite": "^1.0.30001307",
     "chart.js": "^3.5.1",
     "chartjs-adapter-moment": "^1.0.0",
-    "chartjs-plugin-colorschemes": "^0.4.0",
     "chartjs-plugin-streaming": "^2.0.0",
-    "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "^3.6.5",
     "downloadjs": "^1.4.7",
     "dragula": "^3.7.3",
@@ -35,13 +25,10 @@
     "hls.js": "^1.1.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "paper": "^0.12",
     "pixi-text-input": "^1.0.6",
     "pixi.js": "^6.3.0",
-    "puxi.js": "^0.0.5",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "^0.10.0",
     "sha256": "^0.2.0",
@@ -54,15 +41,13 @@
     "vue-toastification": "^1.7.11",
     "vuetify": "^2.5.8",
     "vuex": "^3.4.0",
-    "vuex-persist": "2.0.1",
-    "winbox": "^0.2.0"
+    "vuex-persist": "2.0.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@intlify/vue-i18n-loader": "^1.0.0",
-    "@mdi/font": "^6.5.95",
-    "@mdi/js": "^6.5.95",
+    "@mdi/font": "^6.6.96",
     "@types/dragula": "^3.7.1",
-    "@types/electron-devtools-installer": "^2.2.0",
     "@types/fontfaceobserver": "^2.1.0",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.172",
@@ -80,8 +65,6 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.2.2",
-    "electron": "^13.0.0",
-    "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
@@ -92,9 +75,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "10",
-    "spectron": "15.0.0",
     "typescript": "~3.9.3",
-    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-cli-plugin-i18n": "~2.1.1",
     "vue-cli-plugin-styleguidist": "~4.22.3",
     "vue-cli-plugin-vuetify": "~2.0.5",
