--- a/fe/package.json
+++ b/fe/package.json
@@ -7,8 +7,7 @@
     "build": "vue-cli-service build --no-clean --dest ../core/recc/www",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e --headless",
-    "lint": "vue-cli-service lint",
-    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
+    "lint": "vue-cli-service lint"
   },
   "main": "background.js",
   "dependencies": {
@@ -77,7 +76,6 @@
     "sass-loader": "10",
     "typescript": "~3.9.3",
     "vue-cli-plugin-i18n": "~2.1.1",
-    "vue-cli-plugin-styleguidist": "~4.22.3",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
@@ -98,11 +96,9 @@
       "ecmaVersion": 2020
     },
     "rules": {
+      "prettier/prettier": "error",
       "camelcase": "off",
       "no-redeclare": "off",
-      "no-undef": "off",
-      "no-var": "off",
-      "prettier/prettier": "off",
       "@typescript-eslint/camelcase": "off",
       "@typescript-eslint/no-empty-function": "off",
       "@typescript-eslint/no-unused-vars": "off",
