--- a/fe/package.json
+++ b/fe/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --no-clean --dest ../core/recc/www",
-    "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e --headless"
+    "test:e2e": "vue-cli-service test:e2e --headless",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
@@ -16,7 +16,7 @@
     "chart.js": "^3.5.1",
     "chartjs-adapter-moment": "^1.0.0",
     "chartjs-plugin-streaming": "^2.0.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.22.2",
     "downloadjs": "^1.4.7",
     "dragula": "^3.7.3",
     "fontfaceobserver": "^2.1.0",
@@ -49,23 +49,28 @@
     "@types/fontfaceobserver": "^2.1.0",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.172",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@types/webrtc": "^0.0.32",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-e2e-cypress": "~5.0.4",
+    "@vue/cli-plugin-eslint": "~5.0.4",
+    "@vue/cli-plugin-pwa": "~5.0.4",
+    "@vue/cli-plugin-router": "~5.0.4",
+    "@vue/cli-plugin-typescript": "~5.0.4",
+    "@vue/cli-plugin-unit-jest": "~5.0.4",
+    "@vue/cli-plugin-vuex": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^1.2.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
+    "@vue/vue2-jest": "^27.0.0-alpha.3",
+    "cypress": "^8.3.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^27.1.0",
     "node-sass": "^7.0.1",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
@@ -73,16 +78,27 @@
     "prettier": "^2.6.2",
     "sass": "^1.19.0",
     "sass-loader": "10",
-    "typescript": "~3.9.3",
-    "vue-cli-plugin-i18n": "~2.1.1",
-    "vue-cli-plugin-vuetify": "~2.0.5",
+    "ts-jest": "^27.0.4",
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-i18n": "~2.3.1",
+    "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "browser": true,
+      "es2021": true,
+      "node": true,
+      "webextensions": true
+    },
+    "globals": {
+      "RTCIceGatheringState": true,
+      "RTCIceServer": true,
+      "RTCConfiguration": true,
+      "RTCSessionDescriptionInit": true,
+      "RTCErrorEvent": true
     },
     "extends": [
       "plugin:vue/essential",
@@ -92,14 +108,16 @@
       "@vue/prettier/@typescript-eslint"
     ],
     "parserOptions": {
-      "ecmaVersion": 2020
+      "ecmaVersion": 2020,
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {
       "@typescript-eslint/camelcase": "off",
       "@typescript-eslint/no-empty-function": "off",
       "@typescript-eslint/no-unused-vars": "off",
       "@typescript-eslint/no-explicit-any": "off",
-      "prettier/prettier": "error"
+      "prettier/prettier": "error",
+      "vue/valid-v-slot": "off"
     },
     "overrides": [
       {
