--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -17,25 +17,11 @@
     "emitDecoratorMetadata": true,
     "baseUrl": ".",
     "resolveJsonModule": true,
-    "types": [
-      "webpack-env",
-      "jest",
-      "vuetify"
-    ],
+    "types": ["jest", "vuetify", "webpack-env", "webrtc"],
     "paths": {
-      "*.ts": [
-        "*"
-      ],
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": [
     "src/**/*.ts",
@@ -44,9 +30,5 @@
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
-  "exclude": [
-    "node_modules",
-    "public",
-    "dist"
-  ]
+  "exclude": ["node_modules", "public", "dist"]
 }
