--- a/core/requirements.main.txt
+++ b/core/requirements.main.txt
@@ -5,7 +5,7 @@ aiodns>=3.0.0
 brotlipy>=0.7.0
 aiohttp_cors>=0.7.0
 aiohttp-swagger>=1.0.16
-grpcio>=1.44.0
+grpcio>=1.46.0
 asyncpg>=0.25.0
 pyyaml>=6.0
 psutil>=5.9.0
@@ -14,14 +14,14 @@ uvloop>=0.16.0
 async-timeout>=4.0.2
 aioredis>=2.0.1
 orjson>=3.6.7
-protobuf>=3.19.4
+protobuf>=3.20.1
 numpy>=1.22.3
 colorama>=0.4.4
 coloredlogs>=15.0.1
 pycryptodome>=3.14.1
 overrides>=6.1.0
-xmltodict>=0.12.0
-minio>=7.1.5
-shapely>=1.8.1.post1
+xmltodict>=0.13.0
+minio>=7.1.8
+shapely>=1.8.2
 python-dateutil>=2.8.2
 msgpack>=1.0.3
