--- a/fe/package.json
+++ b/fe/package.json
@@ -31,15 +31,15 @@
     "roboto-fontface": "^0.10.0",
     "sha256": "^0.2.0",
     "viewerjs": "^1.10.2",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-class-component": "^7.2.6",
     "vue-i18n": "^8.22.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vue-toastification": "^1.7.11",
     "vuetify": "^2.5.8",
-    "vuex": "^3.4.0",
-    "vuex-persist": "2.0.1"
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
