--- a/core/requirements.main.txt
+++ b/core/requirements.main.txt
@@ -5,17 +5,17 @@ aiodns>=3.0.0
 brotlipy>=0.7.0
 aiohttp_cors>=0.7.0
 aiohttp-swagger>=1.0.16
-grpcio>=1.46.1
+grpcio>=1.46.3
 asyncpg>=0.25.0
 pyyaml>=6.0
-psutil>=5.9.0
-pyjwt>=2.3.0
+psutil>=5.9.1
+pyjwt>=2.4.0
 uvloop>=0.16.0
 async-timeout>=4.0.2
 aioredis>=2.0.1
-orjson>=3.6.7
+orjson>=3.6.8
 protobuf>=3.20.1
-numpy>=1.22.3
+numpy>=1.22.4
 colorama>=0.4.4
 coloredlogs>=15.0.1
 pycryptodome>=3.14.1
@@ -25,3 +25,4 @@ minio>=7.1.8
 shapely>=1.8.2
 python-dateutil>=2.8.2
 msgpack>=1.0.3
+python-i18n[YAML]>=0.3.9
