--- a/fe/package.json
+++ b/fe/package.json
@@ -36,7 +36,7 @@
     "vue-i18n": "^8.22.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vue-toastification": "^1.7.11",
+    "vue-toastification": "^1.7.14",
     "vuetify": "^2.5.8",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
@@ -76,7 +76,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "prettier": "^2.6.2",
-    "sass": "^1.19.0",
+    "sass": "1.32.8",
     "sass-loader": "10",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5",
