--- a/core/recc/package/requirements.main.txt
+++ b/core/recc/package/requirements.main.txt
@@ -1,27 +1,28 @@
-docker>=5.0.3
-aiohttp[speedups]>=3.8.1
-cchardet>=2.1.7
 aiodns>=3.0.0
-brotlipy>=0.7.0
-aiohttp_cors>=0.7.0
 aiohttp-swagger>=1.0.16
-grpcio>=1.46.3
-asyncpg>=0.25.0
-pyyaml>=6.0
-psutil>=5.9.1
-pyjwt>=2.4.0
-uvloop>=0.16.0
-async-timeout>=4.0.2
+aiohttp[speedups]>=3.8.1
+aiohttp_cors>=0.7.0
 aioredis>=2.0.1
-orjson>=3.6.8
-protobuf>=3.20.1
-numpy>=1.22.4
-colorama>=0.4.4
+async-timeout>=4.0.2
+asyncpg>=0.25.0
+brotlipy>=0.7.0
+cchardet>=2.1.7
+colorama>=0.4.5
 coloredlogs>=15.0.1
-pycryptodome>=3.14.1
+docker>=5.0.3
+grpcio>=1.47.0
+minio>=7.1.9
+msgpack>=1.0.4
+numpy>=1.22.4
+orjson>=3.7.5
 overrides>=6.1.0
-xmltodict>=0.13.0
-minio>=7.1.8
-shapely>=1.8.2
+protobuf>=4.21.2
+psutil>=5.9.1
+pycryptodome>=3.15.0
+pyjwt>=2.4.0
 python-dateutil>=2.8.2
-msgpack>=1.0.3
+pyyaml>=6.0
+shapely>=1.8.2
+type-serialize>=1.0.2
+uvloop>=0.16.0
+xmltodict>=0.13.0
