--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@recc/api",
-  "version": "2.0.0-dev9-3",
+  "version": "2.0.0-dev10",
   "description": "Frontend API for the recc core",
   "repository": "https://github.com/bogonets/answer",
   "author": "zer0",
