--- a/fe/package.json
+++ b/fe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@recc/fe",
-  "version": "2.0.0-dev9",
+  "version": "2.0.0-dev10",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
-    "@recc/api": "^2.0.0-dev9-2",
+    "@recc/api": "^2.0.0-dev10",
     "@toast-ui/vue-grid": "^4.21.0",
     "chart.js": "^3.5.1",
     "chartjs-adapter-moment": "^1.0.0",
