Remove unused apis in @recc/api

--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "style": "prettier --check .",
+    "style": "prettier --check src tests",
     "lint": "eslint . --ext .jsx,.js,.tsx,.ts",
     "test": "jest"
   },
