--- a/core/requirements.main.txt
+++ b/core/requirements.main.txt
@@ -1,3 +1,5 @@
+recc-mq>=2.0.4
+recc-os>=2.0.4
 aiodns>=3.0.0
 aiohttp-swagger>=1.0.16
 aiohttp[speedups]>=3.8.1
@@ -26,4 +28,3 @@ shapely>=1.8.2
 type-serialize>=1.1.1
 uvloop>=0.16.0
 xmltodict>=0.13.0
-recc-mq>=2.0.4
