--- a/core/requirements.main.txt
+++ b/core/requirements.main.txt
@@ -1,5 +1,9 @@
-recc-mq>=2.0.4
-recc-os>=2.0.4
+recc-cache>=2.1.0
+recc-storage>=2.1.0
+recc-database>=2.1.0
+type-serialize>=1.1.2
+mime-parser>=1.2.0
+
 aiodns>=3.0.0
 aiohttp-swagger>=1.0.16
 aiohttp[speedups]>=3.8.1
@@ -25,7 +29,5 @@ pyjwt>=2.4.0
 python-dateutil>=2.8.2
 pyyaml>=6.0
 shapely>=1.8.2
-type-serialize>=1.1.1
 uvloop>=0.16.0
 xmltodict>=0.13.0
-mime-parser>=1.2.0
