Refactoring bash scripts

--- a/core/setup.cfg
+++ b/core/setup.cfg
@@ -6,7 +6,7 @@ author = zer0
 author_email = osom8979@gmail.com
 maintainer = zer0
 maintainer_email = osom8979@gmail.com
-url = https://answerdoc.bogonets.com
+url = https://github.com/bogonets/answer
 project_urls =
     GitHub: issues = https://github.com/bogonets/answer/issues
     GitHub: repo = https://github.com/bogonets/answer
