--- a/core/requirements.main.txt
+++ b/core/requirements.main.txt
@@ -2,31 +2,19 @@ recc-cache>=2.1.0
 recc-storage>=2.1.0
 recc-database>=2.1.0
 type-serialize>=1.1.2
+generalize-config>=1.2.0
 mime-parser>=1.2.0
-aiodns>=3.0.0
-aiohttp-swagger>=1.0.16
-aiohttp[speedups]>=3.8.1
+aiohttp[speedups]>=3.8.3
 aiohttp_cors>=0.7.0
-aioredis>=2.0.1
-async-timeout>=4.0.2
-asyncpg>=0.26.0
-brotlipy>=0.7.0
-cchardet>=2.1.7
-colorama>=0.4.5
 coloredlogs>=15.0.1
-docker>=5.0.3
-grpcio>=1.47.0
-minio>=7.1.10
 msgpack>=1.0.4
-numpy>=1.22.4
+numpy>=1.23.3
 orjson>=3.7.5
-overrides>=6.1.0
-protobuf>=4.21.2
+overrides>=7.0.0
 psutil>=5.9.1
 pycryptodome>=3.15.0
-pyjwt>=2.4.0
+pyjwt>=2.5.0
 python-dateutil>=2.8.2
 pyyaml>=6.0
 shapely>=1.8.2
-uvloop>=0.16.0
-xmltodict>=0.13.0
+uvloop>=0.17.0
