Remove package: recc.argparse

--- a/core/requirements.main.txt
+++ b/core/requirements.main.txt
@@ -1,20 +1,31 @@
+# submodules
 recc-cache>=2.1.0
 recc-storage>=2.1.0
 recc-database>=2.1.0
-type-serialize>=1.1.2
-generalize-config>=1.2.0
+
+# extra submodules
+type-serialize>=1.2.1
+generalize-config>=1.2.1
 mime-parser>=1.2.0
-aiohttp[speedups]>=3.8.3
-aiohttp_cors>=0.7.0
-coloredlogs>=15.0.1
+
+# serialize
 msgpack>=1.0.4
-numpy>=1.23.3
 orjson>=3.7.5
-overrides>=7.0.0
-psutil>=5.9.1
+pyyaml>=6.0
+
+# science
+numpy>=1.23.3
+shapely>=1.8.2
+
+# security
 pycryptodome>=3.15.0
 pyjwt>=2.5.0
-python-dateutil>=2.8.2
-pyyaml>=6.0
-shapely>=1.8.2
+
+# asyncio
 uvloop>=0.17.0
+aiohttp[speedups]>=3.8.3
+aiohttp_cors>=0.7.0
+
+# utilities
+coloredlogs>=15.0.1
+overrides>=7.0.0
