--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -2,16 +2,12 @@ version: '3.8'
 
 services:
   postgres:
-    container_name: dev-answer-pg
     image: timescale/timescaledb:2.1.0-pg13
     restart: always
     volumes:
-      - dev_postgres_data:/var/lib/postgresql/data
+      - recc_dev_postgres_data:/var/lib/postgresql/data
     ports:
       - 5432:5432
-    labels:
-      - com.bogonets.answer.cluster=true
-      - com.bogonets.answer.cluster.category=db
     environment:
       - TZ=Asia/Seoul
       - POSTGRES_USER=${POSTGRES_USER:-recc}
@@ -23,16 +19,12 @@ services:
       retries: 5
 
   minio:
-    container_name: dev-answer-minio
     image: minio/minio:RELEASE.2020-12-18T03-27-42Z
     restart: always
     volumes:
-      - dev_minio_data:/data
+      - recc_dev_minio_data:/data
     ports:
       - 9000:9000
-    labels:
-      - com.bogonets.answer.cluster=true
-      - com.bogonets.answer.cluster.category=s3
     environment:
       - TZ=Asia/Seoul
       - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY:-recc}
@@ -45,16 +37,12 @@ services:
       retries: 5
 
   redis:
-    container_name: dev-answer-redis
     image: redis:6
     restart: always
     volumes:
-      - dev_redis_data:/data
+      - recc_dev_redis_data:/data
     ports:
       - 6379:6379
-    labels:
-      - com.bogonets.answer.cluster=true
-      - com.bogonets.answer.cluster.category=cache
     environment:
       - TZ=Asia/Seoul
     command: ["redis-server"]
@@ -64,25 +52,7 @@ services:
       timeout: 5s
       retries: 5
 
-  coturn:
-    container_name: dev-answer-coturn
-    image: coturn/coturn:4.5
-    restart: always
-    volumes:
-      - dev_coturn_data:/var/lib/coturn/
-    ports:
-      - 3478:3478/tcp
-      - 3478:3478/udp
-      - 49160-49200:49160-49200/udp
-    labels:
-      - com.bogonets.answer.cluster=true
-      - com.bogonets.answer.cluster.category=turn
-    command: ["turnserver", "-n", "--min-port=49160", "--max-port=49200"]
-    environment:
-      - TZ=Asia/Seoul
-
 volumes:
-  dev_postgres_data:
-  dev_minio_data:
-  dev_redis_data:
-  dev_coturn_data:
+  recc_dev_postgres_data:
+  recc_dev_minio_data:
+  recc_dev_redis_data:
